--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^2.0.17
   get: ^4.7.2
   pin_code_fields: ^8.0.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
